--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Perplexity Assistant</title>
+  <title>My Assistant</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -247,3 +247,4 @@
 <!-- ... -->  
 </body>
 </html>
+
