--- a/index.html
+++ b/index.html
@@ -212,7 +212,8 @@
       };
 
       try {
-        const response = await fetch(endpoint, {
+        const corsProxy = "https://cors-anywhere.herokuapp.com/";
+        const response = await fetch(corsProxy + endpoint, {
           method: 'POST',
           headers: {
             "Authorization": `Bearer ${API_KEY}`,
@@ -247,4 +248,5 @@
 <!-- ... -->  
 </body>
 </html>
+
 
