--- a/index.html
+++ b/index.html
@@ -245,8 +245,33 @@
       }
     });
   </script>
+  <script>
+  // Disable right click context menu
+  document.addEventListener('contextmenu', event => event.preventDefault());
+
+  // Disable common keyboard shortcuts for devtools
+  document.addEventListener('keydown', function(event) {
+    // F12 key
+    if (event.key === 'F12') {
+      event.preventDefault();
+    }
+    // Ctrl + Shift + I (Inspect)
+    if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'i') {
+      event.preventDefault();
+    }
+    // Ctrl + Shift + J (Console)
+    if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'j') {
+      event.preventDefault();
+    }
+    // Ctrl + U (View Source)
+    if (event.ctrlKey && event.key.toLowerCase() === 'u') {
+      event.preventDefault();
+    }
+  });
+</script>
 <!-- ... -->  
 </body>
 </html>
+
 
 
