--- a/index.html
+++ b/index.html
@@ -151,7 +151,11 @@
       <button type="submit">Send</button>
     </form>
   </div>
-  
+  <p style="margin-top: 2em; font-size: 0.9em; color: #555;">
+    Visit <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank" rel="noopener noreferrer">
+      Click "Request temporary access to the demo server"
+    </a> to enable the CORS proxy temporarily.
+  </p>
   <script>
     const API_KEY = "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";
     const messages = [
@@ -272,6 +276,7 @@
 <!-- ... -->  
 </body>
 </html>
+
 
 
 
