--- a/index.html
+++ b/index.html
@@ -153,8 +153,8 @@
   </div>
   <p style="margin-top: 2em; font-size: 0.9em; color: #555;">
     Visit <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank" rel="noopener noreferrer">
-      Click "Request temporary access to the demo server"
-    </a> to enable the CORS proxy temporarily.
+     If you are getting the Failed to Fetch error. Click "Request temporary access to the demo server"
+    </a> 
   </p>
   <script>
     const API_KEY = "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";
@@ -276,6 +276,7 @@
 <!-- ... -->  
 </body>
 </html>
+
 
 
 
