--- a/index.html
+++ b/index.html
@@ -151,11 +151,11 @@
       <button type="submit">Send</button>
     </form>
   </div>
-  <p style="margin-top: 2em; font-size: 0.9em; color: #555;">
-    Visit <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank" rel="noopener noreferrer">
-     If you are getting the Failed to Fetch error. Click "Request temporary access to the demo server"
+ <p style="margin-top: 2em; font-size: 0.9em; color: #555;">
+    If you are getting the Failed to Fetch error then Visit <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank" rel="noopener noreferrer">
+      Click "Request temporary access to the demo server"
     </a> 
-  </p>
+ </p>
   <script>
     const API_KEY = "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";
     const messages = [
@@ -276,6 +276,7 @@
 <!-- ... -->  
 </body>
 </html>
+
 
 
 
