--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
  <!-- Trigger/Open The Modal -->
 <!-- <button id="helpBtn">Open Help</button> -->
 
-<button id="helpBtn">
+<button id="helpBtn" type="button">
 	<!-- Help icon (SVG) -->
 	<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
 		<circle cx="12" cy="12" r="10"/>
@@ -234,7 +234,7 @@
 </button>
 
 <!-- The Modal -->
-<div id="helpModal" class="modal">
+<div id="helpModal"  class="modal">
   <div class="modal-content">
     <span class="close-btn" id="closeHelp">&times;</span>
     <h2>Instructions</h2>
@@ -249,7 +249,6 @@
   </div>
 </div>
   <script>
-    const API_KEY = "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";
     const messages = [
       { role: "system", content: "You are a helpful assistant." }
     ];
@@ -301,22 +300,20 @@
       appendMessage("Thinking...", "assistant");
       chat.scrollTop = chat.scrollHeight;
 
-      const endpoint = "https://api.perplexity.ai/chat/completions";
+      const endpoint = "https://401ed72e-0f79-4df8-975a-0056609e4cbb-00-3u3o1q1wrmnfv.pike.replit.dev/call-api";
       const body = {
         model: "sonar-pro",
         messages: messages
       };
 
       try {
-        const corsProxy = "https://cors-anywhere.herokuapp.com/";
-        const response = await fetch(corsProxy + endpoint, {
-          method: 'POST',
-          headers: {
-            "Authorization": `Bearer ${API_KEY}`,
-            "Content-Type": "application/json"
-          },
-          body: JSON.stringify(body)
-        });
+		
+		 const response = await fetch(endpoint, {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ messages })
+      });
+
         const result = await response.json();
         // Remove "Thinking..."
         const bubbles = document.querySelectorAll('.msg-assistant');
@@ -340,17 +337,14 @@
 		}
       }
     }
-    
-  </script>
-  <script>
-  userInput.addEventListener("keydown", (e) => {
+	
+	  userInput.addEventListener("keydown", (e) => {
       if (e.key === "Enter" && !e.shiftKey) {
         e.preventDefault();
         sendMessage();
       }
     });
-	
-	// Disable right click context menu
+		// Disable right click context menu
   document.addEventListener('contextmenu', event => event.preventDefault());
 
   // Disable common keyboard shortcuts for devtools
@@ -372,8 +366,10 @@
       event.preventDefault();
     }
   });
+    
   </script>
   <script>
+
   // Get modal and buttons
   const modal = document.getElementById("helpModal");
   const btn = document.getElementById("helpBtn");
