--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
  <!-- Trigger/Open The Modal -->
 <!-- <button id="helpBtn">Open Help</button> -->
 
-<button id="helpBtn" type="button">
+<!--<button id="helpBtn" type="button">
 	<!-- Help icon (SVG) -->
 	<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
 		<circle cx="12" cy="12" r="10"/>
@@ -231,10 +231,10 @@
 		<line x1="12" y1="17" x2="12" y2="17"/>
 	</svg>
   Help
-</button>
+</button>-->
 
 <!-- The Modal -->
-<div id="helpModal"  class="modal">
+<!--<div id="helpModal"  class="modal">
   <div class="modal-content">
     <span class="close-btn" id="closeHelp">&times;</span>
     <h2>Instructions</h2>
@@ -247,7 +247,7 @@
       <li>Error 2: <b>"No reply or an error occured"</b> then reload link again <a href="https://lokeshkumarp90.github.io/MyAssistance/" target="" rel="noopener noreferrer"> Reload the Assistance <a/></li>
     </ul>
   </div>
-</div>
+</div> -->
   <script>
     const messages = [
       { role: "system", content: "You are a helpful assistant." }
@@ -394,3 +394,4 @@
 </script>
 </body>
 </html>
+
