--- a/index.html
+++ b/index.html
@@ -2,265 +2,242 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>My Assistant</title>
+  <title>AI Assistance</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!-- Assistance Style -->
+
+  <!-- Google Font -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root {
-      --primary: #1877f2;
-      --secondary: #f0f2f5;
-      --assistant: #ece3fc;
-      --user: #def3e0;
-      --border: #e0e2e6;
-      --text: #212529;
+      --primary: #4F46E5;
+      --secondary: #F9FAFB;
+      --assistant: #EEF2FF;
+      --user: #DCFCE7;
+      --border: #E5E7EB;
+      --text: #111827;
       --bubble-radius: 1.4em;
     }
+
     body {
       background: var(--secondary);
-      font-family: 'Segoe UI', Arial, sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       min-height: 100vh;
       color: var(--text);
+      display: flex;
+      flex-direction: column;
     }
+
+    /* HEADER */
+    .header {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      padding: 1rem 2rem;
+      background: white;
+      box-shadow: 0 1px 4px rgba(0, 0, 0, 0.05);
+    }
+    .logo {
+      display: flex;
+      align-items: center;
+      gap: 0.6rem;
+    }
+    .logo img {
+      height: 36px;
+    }
+    .logo h1 {
+      font-size: 1.4rem;
+      font-weight: 700;
+      color: var(--primary);
+      margin: 0;
+    }
+    .tagline {
+      font-size: 0.9rem;
+      color: #6B7280;
+    }
+
+    /* APP CONTAINER */
     .app-container {
-      max-width: 850px;
-      margin: 3em auto 2em;
+      max-width: 900px;
+      margin: 2rem auto;
       background: #fff;
       border-radius: 1.5em;
-      box-shadow: 0 4px 24px rgba(0,0,0,0.07), 0 1.5px 6px rgba(24,119,242,0.07);
+      box-shadow: 0 4px 24px rgba(0,0,0,0.05);
       display: flex;
       flex-direction: column;
       min-height: 70vh;
+      overflow: hidden;
     }
-    .header {
-      text-align: center;
-      padding: 2em 2em 0.5em 2em;
-    }
-    .header h2 {
-      letter-spacing: 0.03em;
-      color: var(--primary);
-      margin-bottom: 0.5em;
-      font-weight: 700;
-    }
+
+    /* CHAT AREA */
     .chat-area {
-      padding: 1em 1em 0 1em;
+      padding: 1rem;
       flex: 1;
       overflow-y: auto;
       display: flex;
       flex-direction: column;
-      gap: 0.35em;
+      gap: 0.5rem;
       background: var(--secondary);
-      border-top-left-radius: 1em;
-      border-top-right-radius: 1em;
-      min-height: 250px;
-      max-height: 360px;
     }
     .message {
       max-width: 80%;
-      padding: 0.6em 1em;
-      margin-bottom: 0.4em;
-      display: inline-block;
+      padding: 0.7em 1em;
       border-radius: var(--bubble-radius);
-      box-shadow: 0 2px 10px rgba(24,119,242,0.02);
       font-size: 1em;
-      position: relative;
       word-break: break-word;
-      animation: fadeIn 0.2s;
+      animation: fadeIn 0.2s ease;
     }
     .msg-user {
       background: var(--user);
       align-self: flex-end;
       border-bottom-right-radius: 0.3em;
-      border-top-right-radius: var(--bubble-radius);
     }
     .msg-assistant {
       background: var(--assistant);
       align-self: flex-start;
       border-bottom-left-radius: 0.3em;
-      border-top-left-radius: var(--bubble-radius);
     }
     .timestamp {
-      font-size: 0.75em;
-      color: #a4a6a9;
+      font-size: 0.7rem;
+      color: #9CA3AF;
       margin-left: 8px;
-      margin-right: 0;
       vertical-align: middle;
-      user-select: none;
     }
+
+    /* INPUT AREA */
     .input-area {
       display: flex;
-      flex-direction: column;
       border-top: 1px solid var(--border);
-      background: #fff;
-      border-bottom-right-radius: 1.5em;
-      border-bottom-left-radius: 1.5em;
-      padding: 1em 1em 1em;
+      padding: 0.8rem;
+      gap: 0.6rem;
+      background: white;
     }
     textarea {
-      padding: 0.75em 1em;
+      flex: 1;
+      padding: 0.7rem;
       border: 1px solid var(--border);
       border-radius: 0.7em;
       resize: none;
-      font-size: 1em;
+      font-size: 1rem;
       font-family: inherit;
-      height: 48px;
-      margin-bottom: 0.5em;
-      background: #f8fafc;
-      transition: border 0.18s;
+      background: #F3F4F6;
+      transition: border 0.2s;
     }
     textarea:focus {
       border-color: var(--primary);
+      background: white;
       outline: none;
-      background: #fff;
     }
     button {
       background: var(--primary);
       color: #fff;
       border: none;
       border-radius: 0.7em;
-      padding: 0.7em 2.1em;
-      font-size: 1em;
+      padding: 0.7rem 1.5rem;
+      font-size: 1rem;
       font-weight: 600;
-      letter-spacing: 0.04em;
-      margin-left: auto;
       cursor: pointer;
-      box-shadow: 0 2px 8px rgba(24,119,242,0.11);
       transition: background 0.15s;
     }
     button:hover {
-      background: #0f66dc;
+      background: #4338CA;
     }
-    @keyframes fadeIn {
-      0% { opacity: 0; transform: translateY(12px);}
-      100% { opacity: 1; transform: none;}
+
+    /* HELP BUTTON */
+    #helpBtn {
+      position: fixed;
+      bottom: 1.5rem;
+      right: 1.5rem;
+      background-color: var(--primary);
+      color: white;
+      border: none;
+      padding: 0.8rem;
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
     }
-    @media (max-width: 590px) {
-      .app-container { max-width: 100%; margin: 0; border-radius: 0;}
-      .header { padding: 1em 0.2em 0.4em; }
-      .input-area { padding: 1em 0.5em; }
-      .chat-area { padding: 0.8em 0.4em 0 0.4em;}
+
+    /* MODAL */
+    .modal {
+      display: none;
+      position: fixed;
+      z-index: 1000;
+      left: 0; top: 0;
+      width: 100%; height: 100%;
+      background-color: rgba(0,0,0,0.4);
     }
-    .welcome-message {
-      color: #6a11cb;
+    .modal-content {
+      background-color: white;
+      margin: 10% auto;
+      padding: 20px;
+      border-radius: 8px;
+      width: 90%;
+      max-width: 500px;
+    }
+    .close-btn {
+      float: right;
+      font-size: 1.5rem;
+      cursor: pointer;
+    }
+
+    /* FOOTER */
+    footer {
       text-align: center;
-      font-size: 1.17rem;
-      font-weight: 500;
-      letter-spacing: 0.01em;
-      margin-bottom: 1rem;
-      margin-top: 1rem;
-      user-select: none;
+      padding: 1rem;
+      font-size: 0.85rem;
+      color: #6B7280;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(5px); }
+      to { opacity: 1; transform: translateY(0); }
     }
   </style>
-  <!-- Help Section Style -->
-  <style>
-  /* The Modal (background) */
-  .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1000; /* Sit on top */
-    padding-top: 100px; /* Location of the box */
-    left: 0;
-    top: 0;
-    width: 100%; 
-    height: 100%; 
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
-  }
-
-  /* Modal Content */
-  .modal-content {
-    background-color: #fff;
-    margin: auto;
-    padding: 20px;
-    border-radius: 5px;
-    width: 80%;
-    max-width: 600px;
-    box-shadow: 0 5px 15px rgba(0,0,0,0.3);
-  }
-
-  /* Close Button */
-  .close-btn {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-  }
-
-  .close-btn:hover,
-  .close-btn:focus {
-    color: black;
-    text-decoration: none;
-  }
-  
-  #helpBtn{
-   background-color: #007BFF;
-  color: white;
-  border: none;
-  padding: 10px 16px;
-  font-size: 16px;
-  border-radius: 5px;
-  cursor: pointer;
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  box-shadow: 0 2px 6px rgba(0,123,255,0.4);
-  transition: background-color 0.3s ease;
-  }
-</style>
 </head>
 <body>
-<!-- ... (keep your previous <head> and CSS) ... -->
+
+  <!-- HEADER -->
+  <header class="header">
+    <div class="logo">
+      <img src="https://cdn-icons-png.flaticon.com/512/4712/4712109.png" alt="AI Logo">
+      <h1>AI Assistance</h1>
+    </div>
+    <div class="tagline">Your smart, friendly assistant</div>
+  </header>
+
+  <!-- APP -->
   <div class="app-container">
-    <!-- ...header, chat-area leftovers... -->
-    <div class="welcome-message">Welcome and Happy to assit you today!</div>
     <div class="chat-area" id="chat"></div>
     <form class="input-area" onsubmit="event.preventDefault(); sendMessage();">
-      <textarea id="userInput" rows="2" placeholder="Ask me anything..." required autofocus></textarea>
+      <textarea id="userInput" rows="1" placeholder="Ask me anything..." required></textarea>
       <button type="submit">Send</button>
     </form>
   </div>
- <!-- Trigger/Open The Modal -->
-<!-- <button id="helpBtn">Open Help</button> -->
 
-<!--<button id="helpBtn" type="button">
-	<!-- Help icon (SVG) -->
-	<svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true">
-		<circle cx="12" cy="12" r="10"/>
-		<path d="M9.09 9a3 3 0 1 1 5.83 1c-.27 1.07-3 1.5-3 3"/>
-		<line x1="12" y1="17" x2="12" y2="17"/>
-	</svg>
-  Help
-</button>-->
+  <!-- FOOTER -->
+  <footer>
+    &copy; 2025 AI Assistance. All rights reserved.
+  </footer>
 
-<!-- The Modal -->
-<!--<div id="helpModal"  class="modal">
-  <div class="modal-content">
-    <span class="close-btn" id="closeHelp">&times;</span>
-    <h2>Instructions</h2>
-    <p>Please follow the below instructions based on the error you recived while trying to use the assistance.</p>
-    <ul>
-      <li>
-	  Error 1: <b>"The string did not match the expected pattern"</b> then Visit <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank" rel="noopener noreferrer">
-       Click "Request temporary access to the demo server"</a>
-	   </li>
-      <li>Error 2: <b>"No reply or an error occured"</b> then reload link again <a href="https://lokeshkumarp90.github.io/MyAssistance/" target="" rel="noopener noreferrer"> Reload the Assistance <a/></li>
-    </ul>
-  </div>
-</div> -->
+  <!-- JS (kept from your original) -->
   <script>
-    const messages = [
-      { role: "system", content: "You are a helpful assistant." }
-    ];
+    const messages = [{ role: "system", content: "You are a helpful assistant." }];
     const chat = document.getElementById('chat');
     const userInput = document.getElementById('userInput');
 
     function formatTime() {
-      const now = new Date();
-      return now.toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
+      return new Date().toLocaleTimeString([], {hour: '2-digit', minute:'2-digit'});
     }
 
-    // Basic Markdown to HTML (bullets/numbering only)
+    // function appendMessage(content, sender) {
+      // const msgDiv = document.createElement('div');
+      // msgDiv.className = 'message ' + (sender === 'user' ? 'msg-user' : 'msg-assistant');
+      // msgDiv.innerHTML = content + ` <span class="timestamp">${formatTime()}</span>`;
+      // chat.appendChild(msgDiv);
+      // chat.scrollTop = chat.scrollHeight;
+    // }
+	// Basic Markdown to HTML (bullets/numbering only)
     function simpleMarkdownToHTML(text) {
       // Convert numbered lists to <ol>
       text = text.replace(/^\d+\.\s(.+)$/gm, '<li>$1</li>');
@@ -275,8 +252,8 @@
       text = text.replace(/\n\n/g, '<br><br>');
       return text;
     }
-
-    function appendMessage(content, sender) {
+	
+	function appendMessage(content, sender) {
       const msgDiv = document.createElement('div');
       msgDiv.className = 'message ' + (sender === 'user' ? 'msg-user' : 'msg-assistant');
       if (sender === "assistant") {
@@ -294,104 +271,30 @@
       if (!text) return;
       appendMessage(text, 'user');
       userInput.value = '';
-      userInput.focus();
       messages.push({ role: "user", content: text });
 
       appendMessage("Thinking...", "assistant");
-      chat.scrollTop = chat.scrollHeight;
-
-      const endpoint = "https://perplexity-proxy-iuag.onrender.com/call-api";
-      const body = {
-        model: "sonar-pro",
-        messages: messages
-      };
 
       try {
-		
-		 const response = await fetch(endpoint, {
-        method: "POST",
-        headers: { "Content-Type": "application/json" },
-        body: JSON.stringify({ messages })
-      });
-
+        const response = await fetch("https://perplexity-proxy-iuag.onrender.com/call-api", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ messages })
+        });
         const result = await response.json();
-        // Remove "Thinking..."
-        const bubbles = document.querySelectorAll('.msg-assistant');
-		if ( bubbles &&  bubbles.length > 0 &&  typeof bubbles[bubbles.length - 1].innerText !== 'undefined'){
-
-        if (bubbles[bubbles.length - 1].innerText.startsWith('Thinking')) {
-          bubbles[bubbles.length - 1].remove();
-        }
-        const reply = (result.choices && result.choices[0] && result.choices[0].message.content) ? result.choices[0].message.content : "No reply or an error occurred.";
+        document.querySelectorAll('.msg-assistant').forEach(el => {
+          if (el.innerText.startsWith('Thinking')) el.remove();
+        });
+        const reply = result?.choices?.[0]?.message?.content || "No reply or an error occurred.";
         appendMessage(reply, "assistant");
         messages.push({ role: "assistant", content: reply });
-		}
-      }
-	  catch (err) {
-        const bubbles = document.querySelectorAll('.msg-assistant');
-		if ( bubbles &&  bubbles.length > 0 &&  typeof bubbles[bubbles.length - 1].innerText !== 'undefined') {			
-        if (bubbles[bubbles.length - 1].innerText.startsWith('Thinking')) {
-          bubbles[bubbles.length - 1].remove();
-        }
+      } catch (err) {
+        document.querySelectorAll('.msg-assistant').forEach(el => {
+          if (el.innerText.startsWith('Thinking')) el.remove();
+        });
         appendMessage("Error: " + err.message, "assistant");
-		}
       }
     }
-	
-	  userInput.addEventListener("keydown", (e) => {
-      if (e.key === "Enter" && !e.shiftKey) {
-        e.preventDefault();
-        sendMessage();
-      }
-    });
-		// Disable right click context menu
-  document.addEventListener('contextmenu', event => event.preventDefault());
-
-  // Disable common keyboard shortcuts for devtools
-  document.addEventListener('keydown', function(event) {
-    // F12 key
-    if (event.key === 'F12') {
-      event.preventDefault();
-    }
-    // Ctrl + Shift + I (Inspect)
-    if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'i') {
-      event.preventDefault();
-    }
-    // Ctrl + Shift + J (Console)
-    if (event.ctrlKey && event.shiftKey && event.key.toLowerCase() === 'j') {
-      event.preventDefault();
-    }
-    // Ctrl + U (View Source)
-    if (event.ctrlKey && event.key.toLowerCase() === 'u') {
-      event.preventDefault();
-    }
-  });
-    
   </script>
-  <script>
-
-  // Get modal and buttons
-  const modal = document.getElementById("helpModal");
-  const btn = document.getElementById("helpBtn");
-  const closeBtn = document.getElementById("closeHelp");
-
-  // When the user clicks on the button, open the modal
-  btn.onclick = () => {
-    modal.style.display = "block";
-  };
-
-  // When the user clicks on the close button, close the modal
-  closeBtn.onclick = () => {
-    modal.style.display = "none";
-  };
-
-  // When the user clicks anywhere outside the modal content, close it
-  window.onclick = (event) => {
-    if (event.target === modal) {
-      modal.style.display = "none";
-    }
-  };
-</script>
 </body>
 </html>
-
